--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,29 @@ main {
     max-width: 100%;
     max-height: 100vh;
     overflow: hidden;
-    min-width: 520px;
+    min-width: 940px;
     
+}
+
+/* COMMON CLASSES */
+div.user-avatar{
+    width: 50px;
+    height: 50px;
+}
+
+div.user-avatar img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* EXPLORER CHATS */
 div#explorer-chats{
     padding: 10px 0;
     overflow: hidden;
-
 }
 
+/* user-bar */
 div#explorer-chats div#user-bar{
     height: 80px;
     background-color: #1F2C33;
@@ -42,7 +54,7 @@ div#explorer-chats div#search-bar{
 div#explorer-chats div#messages{
     height: calc(100vh - 260px);
     background-color: #111B21;
-
+    min-height: 80px;
     overflow-y: auto;
 
     border: 1px solid red;
@@ -65,6 +77,9 @@ div#chat div#user-chat{
 div#chat div#messages-chat{
     height: calc(100vh - 180px);
     overflow-y: auto;
+    min-height: 160px;
+    background-image: url("../img/wallpaper-black.jpeg");
+    background-size: contain;
 
     border: 1px solid red;
 }
